--- a/Curs01/Ex01/index.html
+++ b/Curs01/Ex01/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 
 <head>
-
   <title>Media Queries</title>
+
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  >
 
   <link
     rel="stylesheet"
@@ -17,7 +21,7 @@
 </head>
 
 <body>
-
+  <h1>Titlu</h1>
   <div class="box box-1">
     <h1>01</h1>
   </div>
