Tema 17 Martie html 2

--- a/Curs01/Ex01/index.html
+++ b/Curs01/Ex01/index.html
@@ -25,6 +25,7 @@
   <div class="box box-1">
     <h1>01</h1>
   </div>
+  <h2>Titlu 2</h2>
   <div class="box box-2">
     <h1>02</h1>
   </div>
@@ -37,6 +38,8 @@
   <div class="box box-5">
     <h1>05</h1>
   </div>
+
+  <h3>Titlu 2</h3>
 
   <div
     class="pixeltab-host"
