--- a/Curs01/Ex05/index.html
+++ b/Curs01/Ex05/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 
 <head>
-
-
   <title>Sass, & and variables</title>
+
+  <link
+    rel="stylesheet"
+    href="css/style.css"
+  >
 
   <link
     rel="stylesheet"
@@ -12,7 +15,7 @@
   >
 </head>
 
-<body>
+<body class="all-visited">
 
   <ul>
     <li><a
