--- a/Curs01/Ex06/index.html
+++ b/Curs01/Ex06/index.html
@@ -3,6 +3,10 @@
 
 <head>
   <title>Mixins</title>
+  <link
+    rel="stylesheet"
+    href="css/style.css"
+  >
 
   <link
     rel="stylesheet"
@@ -12,7 +16,10 @@
 
 <body>
 
-  <div>
+  <div class="squares">
+    <div class="square square-magenta"></div>
+    <div class="square square-peru"></div>
+    <div class="square square-purple"></div>
 
   </div>
 
