--- a/Curs01/Ex07/index.html
+++ b/Curs01/Ex07/index.html
@@ -7,6 +7,10 @@
     content="width=device-width, initial-scale=1.0"
   >
   <title>Responsive Mixins</title>
+  <link
+    rel="stylesheet"
+    href="css/style.css"
+  >
 
   <style>
     body {
