--- a/Curs01/Ex08/index.html
+++ b/Curs01/Ex08/index.html
@@ -3,6 +3,10 @@
 
 <head>
   <title>Extends</title>
+  <link
+    rel="stylesheet"
+    href="css/style.css"
+  >
 
   <link
     rel="stylesheet"
@@ -11,8 +15,12 @@
 </head>
 
 <body>
+  <div></div>
 
-  <div>
+  <div class="circles">
+    <div class="circle-red"></div>
+    <div class="circle-green"></div>
+    <div class="circle-blue"></div>
 
   </div>
 
