--- a/Curs01/Ex06/index.html
+++ b/Curs01/Ex06/index.html
@@ -15,6 +15,13 @@
 </head>
 
 <body>
+  <div class="circles">
+    <div class="circle circle-border-blue"></div>
+    <div class="circle circle-red"></div>
+    <div class="circle circle-green"></div>
+    <div class="circle circle-blue"></div>
+
+  </div>
 
   <div class="squares">
     <div class="square square-magenta"></div>
