--- a/Curs01/Ex08/index.html
+++ b/Curs01/Ex08/index.html
@@ -15,7 +15,14 @@
 </head>
 
 <body>
-  <div></div>
+  <div class="squares">
+    <div class="square-magenta"></div>
+    <div class="square-peru"></div>
+    <div class="square-purple"></div>
+    <div class="square-blue"></div>
+    <div class="square-red"></div>
+
+  </div>
 
   <div class="circles">
     <div class="circle-red"></div>
