--- a/Curs02/Ex03/index.html
+++ b/Curs02/Ex03/index.html
@@ -17,14 +17,19 @@
     rel="stylesheet"
     href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
   >
+  <link
+    rel="stylesheet"
+    href="css/style.css"
+  >
 </head>
 
 <body>
-  <button>Button1</button>
-  <button>Button2</button>
-  <button>Button3</button>
-  <button>Button4</button>
-  <button>Button5</button>
+  <button class="btn-primary">Button1</button>
+  <button class="btn-secondary">Button2</button>
+  <button class="btn-inverted btn-text-gray">Button3</button>
+  <button class="btn-inverted-light">Button4</button>
+  <button class="btn-tertiary">Button5</button>
+
 
   <div
     class="pixeltab-host"
