tema 5 aprilie partea 2

--- a/Curs07/Ex03/anim12.html
+++ b/Curs07/Ex03/anim12.html
@@ -11,18 +11,16 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   >
-  <title>Ex3</title>
+  <title>Ex2</title>
   <link
     rel="stylesheet"
-    href="css/style2.css"
+    href="css/style12.css"
   >
 </head>
 
 <body>
-  <div class="animation">
-    <div></div>
-    <div></div>
-    <div></div>
+  <div>
+    <span>Loading..</span>
   </div>
 </body>
 
