--- a/Curs07/Ex02/index2.html
+++ b/Curs07/Ex02/index2.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta
-    http-equiv="X-UA-Compatible"
-    content="IE=edge"
-  >
-  <meta
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   >
-  <title>Ex3</title>
+  <meta
+    http-equiv="X-UA-Compatible"
+    content="ie=edge"
+  >
+  <title>Animatii avansate</title>
   <link
     rel="stylesheet"
     href="css/style2.css"
@@ -19,11 +19,7 @@
 </head>
 
 <body>
-  <div class="animation">
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
+  <div class="box-1"></div>
 </body>
 
 </html>
