tema 12 aprilie + 19 aprilie

--- a/Curs11/Ex17/index.html
+++ b/Curs11/Ex17/index.html
@@ -12,15 +12,25 @@
     content="ie=edge"
   >
   <title>grid-auto-*</title>
-
+  <link
+    rel="stylesheet"
+    href="css/style.css"
+  >
   <link
     rel="stylesheet"
     href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
   >
 </head>
 
-<body>
 
+<body>
+  <div class="grid-container">
+    <div class="grid-item-1"></div>
+    <div class="grid-item-2"></div>
+
+    <div class="grid-item-3"></div>
+    <div class="grid-item-4"></div>
+  </div>
   <div
     class="pixeltab-host"
     id="html02-11-17"
