--- a/Curs11/Ex16/index.html
+++ b/Curs11/Ex16/index.html
@@ -17,10 +17,43 @@
     rel="stylesheet"
     href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
   >
+  <link
+    rel="stylesheet"
+    href="css/style.css"
+  >
 </head>
 
 <body>
+  <div class="grid-container-1">
+    <div class="grid-item-1"></div>
+    <div class="grid-item-2"></div>
+  </div>
 
+  <div class="grid-container-2">
+    <div class="grid-item-1"></div>
+    <div class="grid-item-2"></div>
+  </div>
+
+
+  <div class="grid-container-3">
+    <div class="grid-item-1"></div>
+    <div class="grid-item-2"></div>
+  </div>
+
+  <div class="grid-container-4">
+    <div class="grid-item-1"></div>
+    <div class="grid-item-2"></div>
+  </div>
+
+  <div class="grid-container-5">
+    <div class="grid-item-1"></div>
+    <div class="grid-item-2"></div>
+  </div>
+
+  <div class="grid-container-6">
+    <div class="grid-item-1"></div>
+    <div class="grid-item-2"></div>
+  </div>
   <div
     class="pixeltab-host"
     id="html02-11-16"
