--- a/Curs05/Ex02/index.html
+++ b/Curs05/Ex02/index.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  >
+  <meta
+    http-equiv="X-UA-Compatible"
+    content="ie=edge"
+  >
   <title>Bootstrap Grid</title>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+    crossorigin="anonymous"
+  >
 </head>
+
 <body>
-  
+
+  <div class="container d-flex flex-row">
+    <div
+      class="row bg-danger text-dark text-center align-items-start justify-content-between flex-grow-1"
+      style="height:180px"
+    >
+      <div class="col-2 bg-light border border-dark">a</div>
+      <div class="col-4 bg-light border border-dark">b</div>c
+      <div class="col-2 bg-light border border-dark">c</div>
+    </div>
+
+    <div
+      class="row bg-warning text-info text-center align-items-center justify-content-around flex-grow-1"
+      style="height:180px"
+    >
+      <div class="col-4 bg-light border border-info">sidebar</div>
+      <div class="col-7 bg-light border border-info">content</div>
+
+    </div>
+
+    <div
+      class="row bg-primary text-white text-center align-items-end justify-content-end flex-grow-1"
+      style="height:180px"
+    >
+      <div class="col-6 bg-dark border border-white">x</div>
+    </div>
+  </div>
+
 </body>
+
 </html>
