--- a/Curs05/Ex13/index.html
+++ b/Curs05/Ex13/index.html
@@ -17,9 +17,236 @@
     rel="stylesheet"
     href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
   >
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+    crossorigin="anonymous"
+  >
 </head>
 
 <body>
+  <form action="">
+    <header class="container">
+      <h1>Formular Reteta</h1>
+    </header>
+
+    <main class="container">
+      <fieldset>
+        <header>
+          <h2>Reteta</h2>
+        </header>
+
+        <section class="row">
+          <div class="col-12 col-lg-6 d-flex flex-column gap-2">
+            <div class="input-group">
+              <label
+                for="recipe-name"
+                class="input-group-text"
+              >Numele retetei *</label>
+
+              <input
+                type="text"
+                name="recipe-name"
+                id="recipe-name"
+                class="form-control"
+                placeholder="Numele retetei *"
+                required
+              >
+            </div>
+
+            <div class="input-group">
+              <label
+                for="recipe-description"
+                class="input-group-text"
+              >Descriere lunga *</label>
+
+              <textarea
+                name="recipe-description"
+                id="recipe-description"
+                cols="30"
+                rows="8"
+                class="form-control"
+                required
+                placeholder="Descriere lunga *"
+              ></textarea>
+            </div>
+          </div>
+
+          <div class="col-12 col-lg-6 d-flex flex-column gap-2 mt-2 mt-lg-0">
+            <div>
+              <label
+                for="recipe-image"
+                class="form-label"
+              >Imagine principala *</label>
+              <input
+                type="file"
+                name="recipe-image"
+                id="recipe-image"
+                class="form-control"
+              >
+            </div>
+          </div>
+        </section>
+      </fieldset>
+
+      <fieldset class="mt-4">
+        <header class="mb-2">
+          <h2 class="mb-2">Autor (optional)</h2>
+
+          <div class="form-check form-switch">
+            <input
+              type="checkbox"
+              name="author-enabled"
+              id="author-enabled"
+              class="form-check-input"
+              checked
+            >
+            <label
+              for="author-enabled"
+              class="form-check-label"
+            >Adauga Autor</label>
+          </div>
+        </header>
+
+        <section class="row">
+          <div class="col-12 col-lg-6 d-flex flex-column gap-2">
+            <div class="input-group">
+              <label
+                for="author-name"
+                class="input-group-text"
+              >Nume autor *</label>
+
+              <input
+                type="text"
+                name="author-name"
+                id="author-name"
+                class="form-control"
+                placeholder="Nume autor *"
+                required
+              >
+            </div>
+          </div>
+
+          <div class="col-12 col-lg-6 mt-2 mt-lg-0">
+            <div class="input-group">
+              <label
+                for="author-website"
+                class="input-group-text"
+              >Website</label>
+
+              <input
+                type="text"
+                name="author-website"
+                id="author-website"
+                class="form-control"
+                placeholder="Website"
+              >
+            </div>
+          </div>
+        </section>
+      </fieldset>
+
+      <fieldset class="mt-4">
+        <header>
+          <h2>Ingrediente</h2>
+        </header>
+
+        <section class="row">
+          <div class="col-12 col-lg-6">
+            <div class="input-group">
+              <label
+                for="ingredient-name"
+                class="input-group-text"
+              >Nume Ingredient *</label>
+
+              <input
+                type="text"
+                name="ingredient-name"
+                id="ingredient-name"
+                class="form-control"
+                placeholder="Nume Ingredient *"
+                required
+              >
+              <button
+                type="button"
+                title="Adauga"
+                class="btn btn-primary btn-sm"
+              >
+                Adauga
+              </button>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6 mt-2 mt-lg-0">
+            <h3>Lista de ingrediente</h3>
+            <ul>
+              <li>10g ulei
+                <button
+                  type="button"
+                  title="Editeaza"
+                  class="btn btn-primary btn-sm"
+                >Editeaza</button>
+                <button
+                  type="button"
+                  title="Sterge"
+                  class="btn btn-danger btn-sm"
+                >Sterge</button>
+              </li>
+
+
+            </ul>
+          </div>
+        </section>
+      </fieldset>
+
+      <fieldset class="mt-4">
+        <header>
+          <h2>Pasi</h2>
+        </header>
+
+        <section class="row">
+          <div class="col-12 col-lg-6 d-flex flex-column gap-2">
+            <div class="input-group">
+              <label
+                for="step-name"
+                class="input-grup-text"
+              >Titlu pas *</label>
+
+              <input
+                type="text"
+                name="step-name"
+                id="step-name"
+                class="form-control"
+                placeholder="Titlu pas *"
+                required
+              >
+            </div>
+            <div class="text-end">
+              <button
+                type="button"
+                class="btn btn-outline-danger"
+                title="Reseteaza"
+              >Reseteaza</button>
+              <button
+                type="button"
+                class="btn btn-primary"
+                title="Adauga pas"
+              >Adauga pas</button>
+
+            </div>
+          </div>
+        </section>
+      </fieldset>
+    </main>
+
+    <footer class="container text-center mt-5">
+      <button
+        type="submit"
+        title="Trimite Reteta"
+        class="btn btn-primary btn-lg"
+      >Trimite Reteta</button>
+    </footer>
+  </form>
 
   <div
     class="pixeltab-host"
