--- a/Curs05/Ex04/index.html
+++ b/Curs05/Ex04/index.html
@@ -22,47 +22,47 @@
 
   <div class="container">
     <div class="row">
-      <div class="col">16</div>
-      <div class="col">1</div>
-      <div class="col">3</div>
-      <div class="col">23</div>
-      <div class="col">41</div>
-      <div class="col">40</div>
-      <div class="col">8</div>
-      <div class="col">11</div>
-      <div class="col">2</div>
-      <div class="col">321</div>
-      <div class="col">88</div>
-      <div class="col">6</div>
+      <div class="col order-2">16</div>
+      <div class="col order-1">1</div>
+      <div class="col order-1">3</div>
+      <div class="col order-1">23</div>
+      <div class="col order-1">41</div>
+      <div class="col order-2">40</div>
+      <div class="col order-2">8</div>
+      <div class="col order-1">11</div>
+      <div class="col order-2">2</div>
+      <div class="col order-1">321</div>
+      <div class="col order-2">88</div>
+      <div class="col order-2">6</div>
     </div>
   </div>
 
   <div class="container">
     <div class="row">
-      <div class="col">Third</div>
-      <div class="col">Fourth</div>
-      <div class="col">First</div>
-      <div class="col">Second</div>
-      <div class="col">Sixth</div>
-      <div class="col">Fifth</div>
+      <div class="col order-2">Third</div>
+      <div class="col order-3">Fourth</div>
+      <div class="col order-0">First</div>
+      <div class="col order-1">Second</div>
+      <div class="col order-5">Sixth</div>
+      <div class="col order-4">Fifth</div>
     </div>
   </div>
 
   <div class="container">
     <div class="row">
-      <div class="col">87</div>
-      <div class="col">102</div>
-      <div class="col">3</div>
-      <div class="col">45</div>
-      <div class="col">92</div>
+      <div class="col order-2">87</div>
+      <div class="col order-0">102</div>
+      <div class="col order-4">3</div>
+      <div class="col order-3">45</div>
+      <div class="col order-1">92</div>
     </div>
   </div>
 
   <div class="container">
     <div class="row">
-      <div class="col afk"></div>
-      <div class="col ott"></div>
-      <div class="col tbp"></div>
+      <div class="col afk order-2"></div>
+      <div class="col ott order-0"></div>
+      <div class="col tbp order-1"></div>
     </div>
   </div>
 </body>
