--- a/Curs05/Ex09/index.html
+++ b/Curs05/Ex09/index.html
@@ -35,10 +35,10 @@
 </head>
 
 <body>
-  <div class="box d-inline-block d-lg-block">1</div>
-  <div class="box d-inline-block d-lg-none">2</div>
-  <div class="box d-none d-sm-inline-block d-lg-none">3</div>
-  <div class="box d-none d-sm-inline-block d-lg-block">4</div>
+  <div class="box d-inline-block d-md-none d-lg-block">1</div>
+  <div class="box d-inline-block d-lg-none d-xl-block">2</div>
+  <div class="box d-none d-sm-inline-block d-lg-none d-xl-block">3</div>
+  <div class="box d-none d-sm-inline-block d-md-none d-lg-block">4</div>
 
   <div
     class="pixeltab-host"
