--- a/Curs05/Ex10/index.html
+++ b/Curs05/Ex10/index.html
@@ -12,7 +12,12 @@
     content="ie=edge"
   >
   <title>Alerts</title>
-
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+    crossorigin="anonymous"
+  >
   <link
     rel="stylesheet"
     href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
@@ -20,6 +25,33 @@
 </head>
 
 <body>
+  <div
+    class="alert alert-danger"
+    role="alert"
+  >
+    Why do we use it?
+  </div>
+
+  <div
+    class="alert alert-warning"
+    role="alert"
+  >
+    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+  </div>
+
+  <div
+    class="alert alert-success"
+    role="alert"
+  >
+    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+  </div>
+
+  <div
+    class="alert alert-dark"
+    role="alert"
+  >
+    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+  </div>
 
   <div
     class="pixeltab-host"
