--- a/Curs05/Ex11/index.html
+++ b/Curs05/Ex11/index.html
@@ -42,8 +42,16 @@
         </div>
       </article>
 
-      <article class="container border border-dark mt-4">
-        add code here
+      <article class="container border border-dark mt-4 py-2 d-flex flex-column gap-2">
+        <div class="row justify-content-center">
+          <div class="col-4 bg-secondary border border-dark py-3"></div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-4 bg-secondary border border-dark py-3"></div>
+        </div>
+        <div class="row justify-content-end">
+          <div class="col-4 bg-secondary border border-dark py-3"></div>
+        </div>
       </article>
 
     </section>
@@ -54,8 +62,20 @@
       <h1>Aliniate folosind offset</h1>
     </header>
     <section>
-      <article class="container border border-dark">
-        add code here
+      <article class="container border border-dark mt-4 py-2 d-flex flex-column gap-2">
+        <div class="row">
+          <div class="col-4 bg-secondary border border-dark py-3"></div>
+          <div class="col-4 offset-4 bg-secondary border border-dark py-3"></div>
+        </div>
+
+        <div class="row">
+          <div class="col-4 offset-4 bg-secondary border border-dark py-3"></div>
+        </div>
+
+        <div class="row">
+          <div class="col-4 bg-secondary border border-dark py-3"></div>
+          <div class="col-4 offset-4 bg-secondary border border-dark py-3"></div>
+        </div>
       </article>
 
       <article class="container border border-dark mt-4 py-2 d-flex flex-column gap-2">
