--- a/Curs05/Ex13/index.html
+++ b/Curs05/Ex13/index.html
@@ -368,7 +368,7 @@
 
     <footer class="container text-center mt-5">
       <button
-        type="button"
+        type="reset"
         class="btn btn-outline-danger btn-lg"
         title="Reseteaza"
       >Reseteaza tot</button>
